done booking, swap